2006-08-22  Mike Kelly  <pioto@pioto.org>

	* configure.ac, NEWS: Prepare for 0.4.2.

	+ Release: 0.4.2

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/: Cleanup all our scripts here. Die in more places as
	appropriate, such as if we are totally unable to complete an action
	for all backends. Properly quote "$@" when calling the main()
	function.  Make use of debug_msg(). 

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/common/read_userdata.bash.in
	bash/common/read_groupdata.bash.in: Misc. cleanup. Make us die if we
	can't find some value for one of the variables (we should normally at
	least be able to read the default fallbacks).

	* bash/common/getent_TEST.bash: Rename with a .in suffix, to keep
	things consistent.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/common/functions.bash.in: Added debug_msg(), which is used for
	displaying less-important messages only when the environment has DEBUG
	set.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Cleanup our eselect module to just use
	@SCRIPTDIR@ instead of that other autotools cruft.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* Makefile.am, bash/Makefile.am, bash/auth/Makefile.am,
	bash/common/Makefile.am, eselect/Makefile.am: Update our makefiles to
	use sed instead of those nasty old build scripts.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* tools/subst.bash, tools/get_autoconf_macros.sed: These scripts suck,
	so they're going the way of the dodo.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* tools/find_substs.bash: Add a script for finding all occurrances of
	@foo@ in the relevant files. A convenience script for the package
	maintainer.

2006-08-21  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.4.1

	* NEWS, configure.ac: Prepare for 0.4.1 release.

	* bash/common/config.bash.in: Fix a bug that caused all scripts to
	fail if we actually found anything in NSSWITCH_CONF, due to a
	misunderstanding on my part of how source works.
